# TeletextTerminalEmulator

./: .gitignore  Cargo.toml  README  README.md
.cargo/: config  config.toml
alacritty_terminal/: .gitignore  Cargo.toml
alacritty_terminal/src/: event.rs  index.rs  lib.rs  sync.rs
alacritty_terminal/src/grid/: mod.rs  resize.rs  row.rs  storage.rs
alacritty_terminal/src/term/: cell.rs  color.rs  mod.rs
alacritty_terminal/tests/: ref.rs
backtrace/: eh_frame.ld
block_designs/system/: system.bd  system.bda  system.bxml
block_designs/system/hdl/: system_wrapper.v  system_wrapper.vhd
block_designs/system/hw_handoff/: system.hwh
block_designs/system/ip/system_axi_vip_0_0/: system_axi_vip_0_0.xci  system_axi_vip_0_0.xml  system_axi_vip_0_0_sim_netlist.v  system_axi_vip_0_0_sim_netlist.vhdl  system_axi_vip_0_0_stub.v  system_axi_vip_0_0_stub.vhdl
block_designs/system/ip/system_axi_vip_0_0/sim/: system_axi_vip_0_0.cpp  system_axi_vip_0_0.h  system_axi_vip_0_0.sv  system_axi_vip_0_0_pkg.sv  system_axi_vip_0_0_sc.cpp  system_axi_vip_0_0_sc.h  system_axi_vip_0_0_stub.sv
block_designs/system/ip/system_axi_vip_0_0/synth/: system_axi_vip_0_0.sv
block_designs/system/ip/system_axi_vip_0_axi_periph_1/: system_axi_vip_0_axi_periph_1.xci  system_axi_vip_0_axi_periph_1.xml
block_designs/system/ip/system_clk_wiz_0_0/: system_clk_wiz_0_0.v  system_clk_wiz_0_0.xci  system_clk_wiz_0_0.xdc  system_clk_wiz_0_0.xml  system_clk_wiz_0_0_clk_wiz.v  system_clk_wiz_0_0_sim_netlist.v  system_clk_wiz_0_0_sim_netlist.vhdl  system_clk_wiz_0_0_stub.v  system_clk_wiz_0_0_stub.vhdl
block_designs/system/ip/system_rst_clk_wiz_0_100M_1/: system_rst_clk_wiz_0_100M_1.xci  system_rst_clk_wiz_0_100M_1.xdc  system_rst_clk_wiz_0_100M_1.xml  system_rst_clk_wiz_0_100M_1_sim_netlist.v  system_rst_clk_wiz_0_100M_1_sim_netlist.vhdl  system_rst_clk_wiz_0_100M_1_stub.v  system_rst_clk_wiz_0_100M_1_stub.vhdl
block_designs/system/ip/system_rst_clk_wiz_0_100M_1/sim/: system_rst_clk_wiz_0_100M_1.vhd
block_designs/system/ip/system_rst_clk_wiz_0_100M_1/synth/: system_rst_clk_wiz_0_100M_1.vhd
block_designs/system/ip/system_teletext_controller_0_0/: system_teletext_controller_0_0.xci  system_teletext_controller_0_0.xml  system_teletext_controller_0_0_sim_netlist.v  system_teletext_controller_0_0_sim_netlist.vhdl  system_teletext_controller_0_0_stub.v  system_teletext_controller_0_0_stub.vhdl
block_designs/system/ip/system_teletext_controller_0_0/sim/: system_teletext_controller_0_0.v  system_teletext_controller_0_0.vhd
block_designs/system/ip/system_teletext_controller_0_0/synth/: system_teletext_controller_0_0.v  system_teletext_controller_0_0.vhd
block_designs/system/sim/: system.protoinst  system.v
block_designs/system/synth/: system.hwdef  system.v  system.vhd
block_designs/system/ui/: bd_c954508f.ui
litex/: basys3_build.py  basys3_constraints.py  digilent_basys3.py  ps2_interface.py  teletext_interface.py
litex-basys3-pac/: Cargo.toml  build.rs
litex-basys3-pac/src/: .gitignore  lib.rs  soc.rs
src/: character_set.rs  error.rs  main.rs  ps2.rs  teletext.rs  teletext_interface.rs  teletext_terminal.rs
src/teletext/: enhancements.rs  interface.rs  terminal.rs
vhdl/: Basys3_Master.xdc  clock_divider.vhd  framebuffer.vhd  hamming_24_18.vhd  hamming_8_4.vhd  odd_parity.vhd  packet_enhancement_gen.vhd  packet_enhancement_generator.vhd  packet_generator.vhd  packet_header_generator.vhd  packet_normal_generator.vhd  packet_page_header_generator.vhd  shift_register.vhd  sync_generator.vhd  teletext_controller.vhd  teletext_generator.vhd  types_pkg.vhd
vhdl/tb/: sync_generator_tb.vhd  teletext_controller_tb.vhd  teletext_generator_tb.vhd
vivado/: vivado.jou  vivado.xpr
vivado/vivado.gen/sources_1/bd/mref/teletext_controller/: component.xml
vivado/vivado.srcs/sources_1/imports/hdl/: test_wrapper.v
xtask/: Cargo.toml
xtask/src/: main.rs
