[package]
name = "teletext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
litex-hal = { git = "https://github.com/PercyJW-2/rust-litex-hal.git" }
litex-basys3-pac = { path = "./litex-basys3-pac", features = ["rt", "critical-section"] }
embedded-alloc = "0.5.1"
alacritty_terminal = { path = "./alacritty_terminal" }
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
mini-backtrace = { version = "0.1.4", optional = true }
pc-keyboard = { git = "https://github.com/rust-embedded-community/pc-keyboard.git" }
vte-input = { git = "https://github.com/jorolf/vte-input.git" }
phf = { version = "0.11", default-features = false, features = ["macros"] }

[features]
backtrace = ["dep:mini-backtrace"]
terminal_uart = []
teletext_reg = []
teletext_mem = []

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = ["litex-basys3-pac", "xtask"]
