[package]
name = "alacritty_terminal"
version = "0.20.1-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "Library for writing terminal emulators"
readme = "../README.md"
homepage = "https://github.com/alacritty/alacritty"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bitflags = "2.4.1"
log = "0.4"
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex", "rwlock", "once", "lazy", "barrier", "portable_atomic"] }
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
portable-atomic-util = { version = "0.2.1", features = ["alloc"] }
unicode-width = "0.1"
vte = { git = "https://github.com/jorolf/vte.git", default-features = false, features = ["ansi", "no_std"] }

[dev-dependencies]
serde_json = "1.0.0"
